<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/list_line1"
        android:paddingBottom="1dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/payment_id_txt"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/payment_id"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/date_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/date"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/amount"
            android:paddingTop="@dimen/_4sdp"
            android:gravity="right"
            android:paddingRight="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/p_status_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/payment_status"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/s_status_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_36sdp"
            android:text="@string/s_status"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>