<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/list_line1"
        android:paddingBottom="1dp"
        android:visibility="visible">

        <!--<TextView-->
            <!--android:id="@+id/index_txt"-->
            <!--android:layout_width="@dimen/_20sdp"-->
            <!--android:layout_height="@dimen/_31sdp"-->
            <!--android:text="@string/index"-->
            <!--android:paddingTop="@dimen/_4sdp"-->
            <!--android:textAlignment="center"-->
            <!--android:paddingLeft="@dimen/_2sdp"-->
            <!--android:textColor="@color/black"-->
            <!--android:textSize="@dimen/_10sdp" />-->

        <TextView
            android:id="@+id/payment_type_txt"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/payment_type"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/date_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/date"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/term_txt"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/term"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/amount"
            android:paddingTop="@dimen/_4sdp"
            android:gravity="right"
            android:paddingRight="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/view_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/view"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>