<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/linear_color"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible">

        <!--<TextView-->
        <!--android:id="@+id/index_txt"-->
        <!--android:layout_width="@dimen/_25sdp"-->
        <!--android:layout_height="@dimen/_30sdp"-->
        <!--android:text="@string/index"-->
        <!--android:paddingTop="@dimen/_4sdp"-->
        <!--android:textAlignment="center"-->
        <!--android:paddingLeft="@dimen/_2sdp"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="@dimen/_11sdp" />-->

        <TextView
            android:id="@+id/payment_type_txt"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:text="@string/payment_type"
            android:gravity="center_vertical|center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center_vertical|center"
            android:paddingLeft="@dimen/_2sdp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/term_txt"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_30sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:gravity="center_vertical|center"
            android:text="@string/term"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/amount_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_30sdp"
            android:paddingLeft="@dimen/_4sdp"
            android:gravity="center_vertical|center"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/view_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_30sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:gravity="center_vertical|center"
            android:text="View"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</LinearLayout>