<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@android:color/transparent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="@dimen/_10sdp"
            card_view:cardElevation="@dimen/_5sdp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@id/main_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/session_confirm"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgot_title_txt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center"
                        android:text="CHANGE PASSWORD"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/dark_gray" />

                <LinearLayout
                    android:id="@+id/list_linear"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/select_linear"
                    android:layout_weight="1.81"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="@string/newPassword"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/parent_password_etOldPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/list_line"
                            android:gravity="start|center_vertical"
                            android:hint="@string/currentpassword"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="12"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingTop="@dimen/_8sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:paddingBottom="@dimen/_8sdp"
                            android:singleLine="true"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/gray_light"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/parent_password_ivOldpass"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/lock" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/parent_password_etNewPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/list_line"
                            android:gravity="start|center_vertical"
                            android:hint="@string/newPassword"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:singleLine="true"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/gray_light"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/parent_password_ivNewpass"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/lock" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <EditText
                            android:id="@+id/parent_password_etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:background="@drawable/list_line"
                            android:gravity="start|center_vertical"
                            android:hint="@string/confirmpassword"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingRight="@dimen/_15sdp"
                            android:singleLine="true"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/gray_light"
                            android:textSize="@dimen/_12sdp" />

                        <ImageView
                            android:id="@+id/parent_password_ivConfirmpass"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="30dp"
                            android:src="@drawable/lock" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:orientation="horizontal">

                        <!--<Button-->
                        <!--android:id="@+id/cancel_btn"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="@dimen/_35sdp"-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:layout_marginLeft="@dimen/_5sdp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:background="@drawable/blue_btn"-->
                        <!--android:text="Cancel"-->
                        <!--android:textAllCaps="true"-->
                        <!--android:textColor="@color/white"-->
                        <!--android:textSize="@dimen/_10sdp"-->
                        <!--android:textStyle="bold" />-->


                        <Button
                            android:id="@+id/parent_password_btnChange"
                            android:layout_width="@dimen/_120sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_marginRight="@dimen/_6sdp"
                            android:background="@drawable/profile_button"
                            android:text="Change Password"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10sdp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/parent_password_btnClose"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentRight="true"
        android:background="@drawable/close_cancel"
        android:elevation="@dimen/_15sdp"
        android:gravity="center"
        android:text="X"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</RelativeLayout>
